INTYG-3056: Bättre filterhantering. Städat kodbasen, dokumenterat m.m.